# yumi_motion_recording

./: CMakeLists.txt  README.md  package.xml
src/: record_motion.cpp
